--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Rxjs retry x number of times, reset to zero",
   "main": "index.js",
   "scripts": {
+  "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "David Hill <d@vidhill.com> (https://github.com/vidhill)",
